# sald

./: .gitignore  Cargo.toml  DOCS.md  LICENSE  README.md  install.cmd  install.ps1  install.sh
.agent/workflows/: release.md
.github/workflows/: release.yml
bench/: 01_fibonacci.py  01_fibonacci.sald  02_iterative.py  02_iterative.sald  03_array_ops.py  03_array_ops.sald  04_string.py  04_string.sald  05_class.py  05_class.sald  06_dict.py  06_dict.sald  07_higher_order.py  07_higher_order.sald  08_primes.py  08_primes.sald  09_parallel.py  09_parallel.sald  10_channel.py  10_channel.sald  README.md  fibonacci.js  fibonacci.sald  run_all.py  server.js  server.sald
crates/salad/: Cargo.toml
crates/salad/src/: main.rs
crates/sald/: Cargo.toml
crates/sald-core/: Cargo.toml
crates/sald-core/src/: binary.rs  error.rs  lib.rs  wasm.rs
crates/sald-core/src/ast/: expr.rs  mod.rs  stmt.rs
crates/sald-core/src/builtins/: array.rs  boolean.rs  channel.rs  console.rs  crypto.rs  date.rs  dict.rs  ffi.rs  file.rs  http.rs  json.rs  math.rs  mod.rs  null.rs  number.rs  path.rs  process.rs  promise.rs  regex.rs  string.rs  system.rs  test.rs  timer.rs  types.rs
crates/sald-core/src/compiler/: chunk.rs  compiler.rs  mod.rs  opcode.rs
crates/sald-core/src/lexer/: mod.rs  scanner.rs  token.rs
crates/sald-core/src/parser/: mod.rs
crates/sald-core/src/vm/: caller.rs  gc.rs  interner.rs  mod.rs  natives.rs  value.rs  vm.rs
crates/sald-lsp/: Cargo.toml
crates/sald-lsp/src/: lib.rs  main.rs
crates/sald-lsp/src/lsp/: analyzer.rs  backend.rs  completion.rs  import_resolver.rs  mod.rs  symbols.rs
crates/sald/src/: main.rs
docs/sald-lang/: index.html  style.css
examples/pong/: main.sald  salad.json
examples/sald-lua/: interpreter.sald  lexer.sald  parser.sald  salad.json
examples/sald-python/: interpreter.sald  lexer.sald  parser.sald  salad.json
examples/todo-web/: main.sald  salad.json
examples/todo-web/public/css/: style.css
examples/todo-web/public/js/: app.js
examples/todo-web/routes/: api.sald  web.sald
lsp/: .vscodeignore  README.md  language-configuration.json  package.json
lsp/snippets/: sald.json
lsp/src/: extension.ts
lsp/syntaxes/: sald.tmLanguage.json
src/: binary.rs  error.rs  lib.rs  main.rs  wasm.rs
src/ast/: expr.rs  mod.rs  stmt.rs
src/builtins/: array.rs  boolean.rs  channel.rs  console.rs  crypto.rs  date.rs  dict.rs  ffi.rs  file.rs  http.rs  json.rs  math.rs  mod.rs  null.rs  number.rs  path.rs  process.rs  promise.rs  regex.rs  string.rs  system.rs  test.rs  timer.rs  types.rs
src/compiler/: chunk.rs  compiler.rs  mod.rs  opcode.rs
src/jit/: compiler.rs  context.rs  mod.rs  runtime.rs  translate.rs
src/lexer/: mod.rs  scanner.rs  token.rs
src/lsp/: analyzer.rs  backend.rs  completion.rs  import_resolver.rs  mod.rs  symbols.rs
src/parser/: mod.rs
src/vm/: caller.rs  gc.rs  interner.rs  mod.rs  natives.rs  value.rs  vm.rs
tests/: decorator_test.sald  interface_error_test.sald  interface_test.sald  user_decorator_test.sald
