[package]
name = "sald"
version = "0.1.9"
edition = "2021"
description = "Sald Programming Language - A fast, class-based interpreter"
authors = ["starssxproject"]

[dependencies]
thiserror = "1.0"
colored = "2.1"
clap = { version = "4.4", features = ["derive"] }
ptree = "0.4"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = "0.4"
rand = "0.9"
reedline = "0.38"
libloading = "0.8"
libffi = "3.2"
sysinfo = "0.32"
tower-lsp = "0.20"
dashmap = "5"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
opener = "0.7"
dirs = "5"
zip = "2.2"
parking_lot = "0.12"
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
hmac = "0.12"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
hex = "0.4"
regex = "1.10"

[[bin]]
name = "sald"
path = "src/bin/sald.rs"

[[bin]]
name = "sald-lsp"
path = "src/bin/sald-lsp.rs"

[[bin]]
name = "salad"
path = "src/bin/salad.rs"

[lib]
name = "sald"
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
debug = false
