[package]
name = "salad"
version.workspace = true
edition.workspace = true

[dependencies]
sald-core = { path = "../sald-core" }
hyper = { version = "0.14", features = [
  "full",
] }
reqwest = { version = "0.11", features = [
  "json",
  "multipart",
] }
clap = { version = "4.4", features = [
  "derive",
] }
colored = "2.1"
serde_json = "1.0"
parking_lot = "0.12"
rustc-hash = "1.1"
smallvec = "1.11"
tokio = { version = "1", features = [
  "full",
] }
serde = { version = "1.0", features = [
  "derive",
] }
opener = "0.7"
dirs = "5"
zip = "2.2"