[package]
name = "sald-core"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = [
  "derive",
] }
serde_json = "1.0"
parking_lot = "0.12"
rustc-hash = "1.1"
smallvec = "1.11"
regex = "1.10"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = [
  "js",
] }
chrono = { version = "0.4", features = [
  "wasmbind",
] }

# Native-only dependencies (not available in WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = [
  "json",
  "multipart",
] }
tokio = { version = "1", features = [
  "full",
] }
bytes = "1"
futures = "0.3"
chrono = "0.4"
colored = "2.1"
rand = "0.9"
libloading = "0.8"
libffi = "3.2"
sysinfo = "0.32"
dashmap = "5"
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
hmac = "0.12"
uuid = { version = "1.0", features = [
  "v4",
] }
base64 = "0.22"
hex = "0.4"
