[package]
name = "sald-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
sald-core = { path = "../sald-core" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
rustc-hash = "1.1"
serde = { version = "1.0", features = [
  "derive",
] }
dashmap = "5"
serde_json = "1.0"

[lib]
path = "src/lib.rs"